--- a/styless.css
+++ b/styless.css
@@ -45,35 +45,35 @@ header {
 
 /* Стилізувати контейнер елементів верхнього блоку */
 .header-container {
-  /* Задайте властивість flex для гнучкого розташування елементів */
+  display: flex, inline-flex;/* Задайте властивість flex для гнучкого розташування елементів */
  flex-direction: column;  /* Розташуйте елементи верхнього блоку рівномірно */
 }
 
 /* Стилізувати навігаційне меню */
 .header-nav {
-  /* Задайте властивість flex для гнучкого розташування елементів */
-  /* Розташуйте елементи навігаційного меню по центру */
-  /* Задайте проміжок між елементами навігаційного меню 60 пікселів */
+  display: flex, inline-flex; /* Задайте властивість flex для гнучкого розташування елементів */
+  justify-content: center;/* Розташуйте елементи навігаційного меню по центру */
+ padding: 60px; /* Задайте проміжок між елементами навігаційного меню 60 пікселів */
 }
 
 /* Стилізувати список елементів верхнього блоку */
 .header-list {
-  /* Задайте властивість flex для гнучкого розташування елементів */
-  /* Розташуйте елементи верхнього блоку по центру */
-  /* Задайте проміжок між елементами верхнього блоку 60 пікселів */
+  display: flex, inline-flex; /* Задайте властивість flex для гнучкого розташування елементів */
+  justify-content: center;/* Розташуйте елементи верхнього блоку по центру */
+ padding: 60px; /* Задайте проміжок між елементами верхнього блоку 60 пікселів */
 }
 
 /* Стилізувати елементи списку верхнього блоку */
 .header-item {
-  /* Задайте зовнішній відступ для елементів списку верхнього блоку 12 пікселів */
+ margin-top: 12px; /* Задайте зовнішній відступ для елементів списку верхнього блоку 12 пікселів */
 }
 
 /* Стилізувати посилання верхнього блоку */
 .header-link {
-  /* Видаліть підкреслення для посилань верхнього блоку */
-  /* Задайте білий колір тексту для посилань верхнього блоку */
-  /* Задайте розмір шрифту 14 пікселів для тексту посилань верхнього блоку */
-  /* Задайте товщину шрифту 500 для тексту посилань верхнього блоку */
+  text-decoration: none;/* Видаліть підкреслення для посилань верхнього блоку */
+  color:white/* Задайте білий колір тексту для посилань верхнього блоку */
+ font-size: 14px/* Задайте розмір шрифту 14 пікселів для тексту посилань верхнього блоку */
+ font-weight: 500/* Задайте товщину шрифту 500 для тексту посилань верхнього блоку */
   /* Задайте плавний перехід для анімації тексту посилань верхнього блоку */
 }
 
