--- a/styless.css
+++ b/styless.css
@@ -72,18 +72,80 @@ header {
 .header-link {
   text-decoration: none;/* Видаліть підкреслення для посилань верхнього блоку */
   color:white/* Задайте білий колір тексту для посилань верхнього блоку */
- font-size: 14px/* Задайте розмір шрифту 14 пікселів для тексту посилань верхнього блоку */
- font-weight: 500/* Задайте товщину шрифту 500 для тексту посилань верхнього блоку */
+ font-size 14px/* Задайте розмір шрифту 14 пікселів для тексту посилань верхнього блоку */
+ font-weight 500/* Задайте товщину шрифту 500 для тексту посилань верхнього блоку */
   /* Задайте плавний перехід для анімації тексту посилань верхнього блоку */
 }
 
 /* Змінити колір посилання верхнього блоку при наведенні на нього */
 .header-link:hover {
-  /* Змініть колір тексту на фіолетовий при наведенні на посилання верхнього блоку */
+ color:purple /* Змініть колір тексту на фіолетовий при наведенні на посилання верхнього блоку */
 }
 
 /* Стилізувати кнопку верхнього блоку */
 .header-button {
-  /* Задайте внутрішній відступ для кнопки верхнього блоку */
-  /* Задайте висоту рядка 1.5 */
+ padding: auto; /* Задайте внутрішній відступ для кнопки верхнього блоку */
+  height: 1.5/* Задайте висоту рядка 1.5 */
+}
+
+
+
+
+
+
+
+
+
+
+
+.solution-container {
+  /* Зробіть, щоб елементи в цьому контейнері виглядали поруч */
+}
+
+.start-inner {
+}
+
+.start-title {
+ background-color:bisque ,gold /* Задайте градієнтний фон для тексту заголовка */
+  /* Зробіть фоновий градієнт видимим тільки в межах тексту */
+  /* Зробіть колір тексту прозорим для використання градієнту */
+  /* Додайте тінь для створення об'ємного ефекту */
+  /* Розмір шрифту 58px */
+  /* Товщина шрифту 700 */
+  /* Висота рядка тексту 84px */
+  /* Відстань між символами 1.16px */
+  /* Відстань від нижнього краю 32px */
+}
+
+.start-article {
+  /* Колір тексту параграфа білого */
+  /* Тінь тексту для створення об'ємного ефекту */
+  /* Розмір шрифту 15px */
+  /* Товщина шрифту 500 */
+  /* Висота рядка тексту 30px */
+  /* Відстань від нижнього краю 32px */
+}
+
+.start-buttons {
+  /* Зробіть кнопки на блоку "start-buttons" вигнутими поруч */
+}
+
+.start-button {
+  /* Встановіть відступи всередині кнопки 12 px та 24px */
+  /* Відступ справа від кнопки 32px */
+}
+
+.start-button-video {
+  /* Зробіть кнопку для відео вигнутою в ряд */
+  /* Вирівняйте елементи по вертикалі по центру */
+  /* Видаліть фон кнопки */
+  /* Колір тексту кнопки білий */
+  /* Видаліть межі кнопки */
+}
+
+.start-button-video span {
+  /* Відступ зліва на 10 від тексту кнопки */
+  /* Розмір шрифту 16px*/
+  /* Товщина шрифту 500*/
+  /* Звичайна висота рядка тексту */
 }
