--- a/ooo-main/styless.css
+++ b/ooo-main/styless.css
@@ -71,21 +71,21 @@ header {
 /* Стилізувати посилання верхнього блоку */
 .header-link {
   text-decoration: none;/* Видаліть підкреслення для посилань верхнього блоку */
-  color:white/* Задайте білий колір тексту для посилань верхнього блоку */
- font-size 14px/* Задайте розмір шрифту 14 пікселів для тексту посилань верхнього блоку */
- font-weight 500/* Задайте товщину шрифту 500 для тексту посилань верхнього блоку */
+  color:white;/* Задайте білий колір тексту для посилань верхнього блоку */
+ font-size 14px;/* Задайте розмір шрифту 14 пікселів для тексту посилань верхнього блоку */
+ font-weight 500;/* Задайте товщину шрифту 500 для тексту посилань верхнього блоку */
   /* Задайте плавний перехід для анімації тексту посилань верхнього блоку */
 }
 
 /* Змінити колір посилання верхнього блоку при наведенні на нього */
 .header-link:hover {
- color:purple /* Змініть колір тексту на фіолетовий при наведенні на посилання верхнього блоку */
+ color:purple; /* Змініть колір тексту на фіолетовий при наведенні на посилання верхнього блоку */
 }
 
 /* Стилізувати кнопку верхнього блоку */
 .header-button {
  padding: auto; /* Задайте внутрішній відступ для кнопки верхнього блоку */
-  height: 1.5/* Задайте висоту рядка 1.5 */
+  height: 1.5;/* Задайте висоту рядка 1.5 */
 }
 
 
@@ -106,23 +106,23 @@ header {
 }
 
 .start-title {
- background-color:bisque ,gold /* Задайте градієнтний фон для тексту заголовка */
+ background-color: ; /* Задайте градієнтний фон для тексту заголовка */
   /* Зробіть фоновий градієнт видимим тільки в межах тексту */
-  /* Зробіть колір тексту прозорим для використання градієнту */
+ color:transparent; /* Зробіть колір тексту прозорим для використання градієнту */
   /* Додайте тінь для створення об'ємного ефекту */
- font-size 58px /* Розмір шрифту 58px */
- font-weight 700 /* Товщина шрифту 700 */
-  /* Висота рядка тексту 84px */
-  /* Відстань між символами 1.16px */
+ font-size :58px; /* Розмір шрифту 58px */
+ font-weight: 700; /* Товщина шрифту 700 */
+ line-height: 84px; /* Висота рядка тексту 84px */
+ letter-spacing: 1.16/* Відстань між символами 1.16px */
   /* Відстань від нижнього краю 32px */
 }
 
 .start-article {
- color: white /* Колір тексту параграфа білого */
+ color: white; /* Колір тексту параграфа білого */
   /* Тінь тексту для створення об'ємного ефекту */
- font-size 15px  /* Розмір шрифту 15px */
-  font-weight 500 /* Товщина шрифту 500 */
-  /* Висота рядка тексту 30px */
+ font-size 15px;  /* Розмір шрифту 15px */
+  font-weight 500; /* Товщина шрифту 500 */
+ line-height: 30px; /* Висота рядка тексту 30px */
   /* Відстань від нижнього краю 32px */
 }
 
@@ -137,7 +137,7 @@ header {
 
 .start-button-video {
   /* Зробіть кнопку для відео вигнутою в ряд */
-  /* Вирівняйте елементи по вертикалі по центру */
+letter-spacing: normal;  /* Вирівняйте елементи по вертикалі по центру */
   /* Видаліть фон кнопки */
 color: white ; /* Колір тексту кнопки білий */
   /* Видаліть межі кнопки */
@@ -145,7 +145,7 @@ color: white ; /* Колір тексту кнопки білий */
 
 .start-button-video span {
   /* Відступ зліва на 10 від тексту кнопки */
- font-size 16 px /* Розмір шрифту 16px*/
- font-weight 500 /* Товщина шрифту 500*/
-  /* Звичайна висота рядка тексту */
+ font-size :16px; /* Розмір шрифту 16px*/
+ font-weight 500; /* Товщина шрифту 500*/
+ line-height normal;/* Звичайна висота рядка тексту */
 }
