--- a/ooo-main/styless.css
+++ b/ooo-main/styless.css
@@ -146,6 +146,6 @@ color: white ; /* Колір тексту кнопки білий */
 .start-button-video span {
   /* Відступ зліва на 10 від тексту кнопки */
  font-size :16px; /* Розмір шрифту 16px*/
- font-weight 500; /* Товщина шрифту 500*/
- line-height normal;/* Звичайна висота рядка тексту */
+ font-weight: 500; /* Товщина шрифту 500*/
+ line-height: normal;/* Звичайна висота рядка тексту */
 }
