--- a/ooo-main/styless.css
+++ b/ooo-main/styless.css
@@ -72,8 +72,8 @@ header {
 .header-link {
   text-decoration: none;/* Видаліть підкреслення для посилань верхнього блоку */
   color:white;/* Задайте білий колір тексту для посилань верхнього блоку */
- font-size 14px;/* Задайте розмір шрифту 14 пікселів для тексту посилань верхнього блоку */
- font-weight 500;/* Задайте товщину шрифту 500 для тексту посилань верхнього блоку */
+ font-size: 14px;/* Задайте розмір шрифту 14 пікселів для тексту посилань верхнього блоку */
+ font-weight:500;/* Задайте товщину шрифту 500 для тексту посилань верхнього блоку */
   /* Задайте плавний перехід для анімації тексту посилань верхнього блоку */
 }
 
@@ -120,8 +120,8 @@ header {
 .start-article {
  color: white; /* Колір тексту параграфа білого */
   /* Тінь тексту для створення об'ємного ефекту */
- font-size 15px;  /* Розмір шрифту 15px */
-  font-weight 500; /* Товщина шрифту 500 */
+ font-size: 15px;  /* Розмір шрифту 15px */
+  font-weight: 500; /* Товщина шрифту 500 */
  line-height: 30px; /* Висота рядка тексту 30px */
   /* Відстань від нижнього краю 32px */
 }
