--- a/styless.css
+++ b/styless.css
@@ -71,21 +71,21 @@ header {
 /* Стилізувати посилання верхнього блоку */
 .header-link {
   text-decoration: none;/* Видаліть підкреслення для посилань верхнього блоку */
-  color:white/* Задайте білий колір тексту для посилань верхнього блоку */
- font-size 14px/* Задайте розмір шрифту 14 пікселів для тексту посилань верхнього блоку */
- font-weight 500/* Задайте товщину шрифту 500 для тексту посилань верхнього блоку */
+  color:white;/* Задайте білий колір тексту для посилань верхнього блоку */
+ font-size: 14px;/* Задайте розмір шрифту 14 пікселів для тексту посилань верхнього блоку */
+ font-weight:500;/* Задайте товщину шрифту 500 для тексту посилань верхнього блоку */
   /* Задайте плавний перехід для анімації тексту посилань верхнього блоку */
 }
 
 /* Змінити колір посилання верхнього блоку при наведенні на нього */
 .header-link:hover {
- color:purple /* Змініть колір тексту на фіолетовий при наведенні на посилання верхнього блоку */
+ color:purple; /* Змініть колір тексту на фіолетовий при наведенні на посилання верхнього блоку */
 }
 
 /* Стилізувати кнопку верхнього блоку */
 .header-button {
  padding: auto; /* Задайте внутрішній відступ для кнопки верхнього блоку */
-  height: 1.5/* Задайте висоту рядка 1.5 */
+  height: 1.5;/* Задайте висоту рядка 1.5 */
 }
 
 
@@ -106,23 +106,23 @@ header {
 }
 
 .start-title {
- background-color:bisque ,gold /* Задайте градієнтний фон для тексту заголовка */
+ background-color: color-mix(in srgb, color percentage, color percentage); /* Задайте градієнтний фон для тексту заголовка */
   /* Зробіть фоновий градієнт видимим тільки в межах тексту */
-  /* Зробіть колір тексту прозорим для використання градієнту */
+ color:transparent; /* Зробіть колір тексту прозорим для використання градієнту */
   /* Додайте тінь для створення об'ємного ефекту */
-  /* Розмір шрифту 58px */
-  /* Товщина шрифту 700 */
-  /* Висота рядка тексту 84px */
-  /* Відстань між символами 1.16px */
+ font-size :58px; /* Розмір шрифту 58px */
+ font-weight: 700; /* Товщина шрифту 700 */
+ line-height: 84px; /* Висота рядка тексту 84px */
+ letter-spacing: 1.16/* Відстань між символами 1.16px */
   /* Відстань від нижнього краю 32px */
 }
 
 .start-article {
-  /* Колір тексту параграфа білого */
+ color: white; /* Колір тексту параграфа білого */
   /* Тінь тексту для створення об'ємного ефекту */
-  /* Розмір шрифту 15px */
-  /* Товщина шрифту 500 */
-  /* Висота рядка тексту 30px */
+ font-size: 15px;  /* Розмір шрифту 15px */
+  font-weight: 500; /* Товщина шрифту 500 */
+ line-height: 30px; /* Висота рядка тексту 30px */
   /* Відстань від нижнього краю 32px */
 }
 
@@ -137,15 +137,154 @@ header {
 
 .start-button-video {
   /* Зробіть кнопку для відео вигнутою в ряд */
-  /* Вирівняйте елементи по вертикалі по центру */
+letter-spacing: normal;  /* Вирівняйте елементи по вертикалі по центру */
   /* Видаліть фон кнопки */
-  /* Колір тексту кнопки білий */
+color: white ; /* Колір тексту кнопки білий */
   /* Видаліть межі кнопки */
 }
 
 .start-button-video span {
   /* Відступ зліва на 10 від тексту кнопки */
-  /* Розмір шрифту 16px*/
-  /* Товщина шрифту 500*/
-  /* Звичайна висота рядка тексту */
+ font-size :16px; /* Розмір шрифту 16px*/
+ font-weight: 500; /* Товщина шрифту 500*/
+ line-height: normal;/* Звичайна висота рядка тексту */
+}
+
+
+
+
+
+
+
+
+
+
+
+/* bootstrap container change */
+@media (min-width: 1200px) {
+  .container {
+    max-width: 1170px;
+    max-height: 100%;
+  }
+}
+
+/* global */
+.button {
+  border-radius: 5px;
+  background: var(
+    --Gardient,
+    linear-gradient(90deg, #2563eb 0.36%, #d946ef 201.02%)
+  );
+  border: none;
+}
+
+.button a {
+  text-decoration: none;
+  color: #f9fafb;
+  font-size: 14px;
+  font-weight: 500;
+  transition: 0.3s ease;
+}
+
+.button a:hover {
+  color: #cacaca;
+}
+
+body {
+  background: url(../img/global__bg.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
+  font-family: "DM Sans";
+}
+
+.container {
+  width: 1158px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin: 0 auto;
+  outline: 2px solid red;
+}
+
+/* service */
+
+.service-title {
+  /* Використовуйте flex-контейнер для вирівнювання по центру */
+  /* Горизонтальне вирівнювання елементів в центрі */
+
+ color: white; /* Встановіть колір тексту white */
+ font-size: 42px; /* Розмір шрифту 42px */
+  font-weight: 700;/* Товщина шрифту 700*/
+  /* Міжрядковий інтервал normal */
+  /* Зовнішній відступ знизу 32px */
+}
+
+.service-text {
+ flex: center; /* Використовуйте flex-контейнер для вирівнювання по центру */
+  /* Горизонтальне вирівнювання елементів в центрі */
+}
+
+.service-article {
+ text-align: center; /* Вирівняйте текст статті по центру */
+  color: white;/* Встановіть колір тексту white */
+ font-size: 16px; /* Розмір шрифту 16px */
+ font-weight: 400; /* Товщина шрифту 400*/
+  /* Міжрядковий інтервал 26px */
+  /* Зовнішній відступ знизу 40px */
+}
+
+.service-items {
+  /* Використовуйте flex-контейнер для вирівнювання по центру */
+  /* Горизонтальне вирівнювання елементів в центрі */
+  /* Встановіть проміжок між елементами 30px не через margin ta padding */
+}
+
+.service-item {
+  /* Використовуйте flex-контейнер для вирівнювання по центру */
+  /* Розташовуйте дочірні елементи в стовпчик */
+  /* Вирівнюйте елементи по центру по вертикалі */
+  /* Вирівнюйте елементи по центру по горизонталі */
+
+  /* Закруглення кутів 34px (border)*/
+  border: 1px solid var(--Bg-2, rgba(255, 255, 255, 0.08));
+  background: linear-gradient(
+    268deg,
+    rgba(254, 254, 255, 0.03) -11.04%,
+    rgba(255, 255, 255, 0.02) 104.89%
+  );
+
+  /* Shadow  */
+  box-shadow: 0px 22px 18px 0px rgba(0, 0, 0, 0.05);
+  /* Внутрішній відступ 20px ta 40 px*/
+}
+
+.service-item-icon {
+  /* Зовнішній відступ 18px */
+}
+
+.service-item-title {
+  /* Зовнішній відступ 18px */
+ color: white; /* Встановіть колір тексту white */
+  font-size: 24px;;/* Розмір шрифту 24px */
+  font-weight: 500; /* Товщина шрифту 500*/
+  /* Міжрядковий інтервал normal */
+}
+
+.service-item-article {
+  /* Зовнішній відступ снизу 24px */
+ color: white; /* Встановіть колір тексту white */
+ font-size: 16px;; /* Розмір шрифту 16px */
+ font-weight: 400; /* Товщина шрифту 400*/
+  /* Міжрядковий інтервал 26px */
+ text-align: left; /* Вирівнюйте текст по лівому краю (text-align)*/
+}
+
+.service-item-link {
+  /* Використовуйте flex-контейнер для вирівнювання по центру */
+  /* Відмініть оформлення підкреслення для посилання */
+}
+
+.service-item-link span {
+ color: white; /* Встановіть колір тексту white */
+  /* Зовнішній відступ справа 8px */
 }
