--- a/ooo-main/styless.css
+++ b/ooo-main/styless.css
@@ -106,7 +106,7 @@ header {
 }
 
 .start-title {
- background-color: ; /* Задайте градієнтний фон для тексту заголовка */
+ background-color: color-mix(in srgb, color percentage, color percentage); /* Задайте градієнтний фон для тексту заголовка */
   /* Зробіть фоновий градієнт видимим тільки в межах тексту */
  color:transparent; /* Зробіть колір тексту прозорим для використання градієнту */
   /* Додайте тінь для створення об'ємного ефекту */
@@ -148,4 +148,90 @@ color: white ; /* Колір тексту кнопки білий */
  font-size :16px; /* Розмір шрифту 16px*/
  font-weight: 500; /* Товщина шрифту 500*/
  line-height: normal;/* Звичайна висота рядка тексту */
+}
+
+
+
+
+/* service */
+
+.service-title {
+  /* Використовуйте flex-контейнер для вирівнювання по центру */
+  /* Горизонтальне вирівнювання елементів в центрі */
+
+ color: white; /* Встановіть колір тексту white */
+ font-size: 42px; /* Розмір шрифту 42px */
+  font-weight: 700;/* Товщина шрифту 700*/
+  /* Міжрядковий інтервал normal */
+  /* Зовнішній відступ знизу 32px */
+}
+
+.service-text {
+ flex: center; /* Використовуйте flex-контейнер для вирівнювання по центру */
+  /* Горизонтальне вирівнювання елементів в центрі */
+}
+
+.service-article {
+ text-align: center; /* Вирівняйте текст статті по центру */
+  color: white;/* Встановіть колір тексту white */
+ font-size: 16px; /* Розмір шрифту 16px */
+ font-weight: 400; /* Товщина шрифту 400*/
+  /* Міжрядковий інтервал 26px */
+  /* Зовнішній відступ знизу 40px */
+}
+
+.service-items {
+  /* Використовуйте flex-контейнер для вирівнювання по центру */
+  /* Горизонтальне вирівнювання елементів в центрі */
+  /* Встановіть проміжок між елементами 30px не через margin ta padding */
+}
+
+.service-item {
+  /* Використовуйте flex-контейнер для вирівнювання по центру */
+  /* Розташовуйте дочірні елементи в стовпчик */
+  /* Вирівнюйте елементи по центру по вертикалі */
+  /* Вирівнюйте елементи по центру по горизонталі */
+
+  /* Закруглення кутів 34px (border)*/
+  border: 1px solid var(--Bg-2, rgba(255, 255, 255, 0.08));
+  background: linear-gradient(
+    268deg,
+    rgba(254, 254, 255, 0.03) -11.04%,
+    rgba(255, 255, 255, 0.02) 104.89%
+  );
+
+  /* Shadow  */
+  box-shadow: 0px 22px 18px 0px rgba(0, 0, 0, 0.05);
+  /* Внутрішній відступ 20px ta 40 px*/
+}
+
+.service-item-icon {
+  /* Зовнішній відступ 18px */
+}
+
+.service-item-title {
+  /* Зовнішній відступ 18px */
+ color: white; /* Встановіть колір тексту white */
+  font-size: 24px;;/* Розмір шрифту 24px */
+  font-weight: 500; /* Товщина шрифту 500*/
+  /* Міжрядковий інтервал normal */
+}
+
+.service-item-article {
+  /* Зовнішній відступ снизу 24px */
+ color: white; /* Встановіть колір тексту white */
+ font-size: 16px;; /* Розмір шрифту 16px */
+ font-weight: 400; /* Товщина шрифту 400*/
+  /* Міжрядковий інтервал 26px */
+ text-align: left; /* Вирівнюйте текст по лівому краю (text-align)*/
+}
+
+.service-item-link {
+  /* Використовуйте flex-контейнер для вирівнювання по центру */
+  /* Відмініть оформлення підкреслення для посилання */
+}
+
+.service-item-link span {
+ color: white; /* Встановіть колір тексту white */
+  /* Зовнішній відступ справа 8px */
 }
